Bug 120062 - [sh4] Missing ensureSpace call in branchPtrWithPatch
Summary: [sh4] Missing ensureSpace call in branchPtrWithPatch
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-20 05:14 PDT by Julien Brianceau
Modified: 2013-08-20 06:37 PDT (History)
2 users (show)

See Also:


Attachments
Add missing ensureSpace calls in sh4 baseline JIT (1.88 KB, patch)
2013-08-20 05:18 PDT, Julien Brianceau
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Brianceau 2013-08-20 05:14:33 PDT
branchPtrWithPatch() of baseline JIT must ensure that space is available for its instructions and 2 constants now DFG is enabled for sh4 architecture.

These missing ensureSpace calls lead to random crashes.
Comment 1 Julien Brianceau 2013-08-20 05:18:59 PDT
Created attachment 209182 [details]
Add missing ensureSpace calls in sh4 baseline JIT
Comment 2 WebKit Commit Bot 2013-08-20 06:37:09 PDT
Comment on attachment 209182 [details]
Add missing ensureSpace calls in sh4 baseline JIT

Clearing flags on attachment: 209182

Committed r154324: <http://trac.webkit.org/changeset/154324>
Comment 3 WebKit Commit Bot 2013-08-20 06:37:11 PDT
All reviewed patches have been landed.  Closing bug.